--- a/apis.yml
+++ b/apis.yml
@@ -6,9 +6,9 @@ image: https://kinlane-productions.s3.amazonaws.com/apis-json/apis-json-logo.jpg
 tags:
 - Blockchain
 - Web3
-created: '2024-05-22'
-modified: '2024-05-22'
-url: http://example.com/apis.json
+created: '2024-09-27'
+modified: '2024-09-27'
+url: https://github.com/api-search/blockfrost/apis.yml
 specificationVersion: '0.18'
 apis:
 - aid: blockfrost:blockfrost
@@ -22,18 +22,42 @@ apis:
     - Web3
   properties:
   - type: Documentation
-    url: https://example.com/documentation
+    url: https://blockfrost.dev/
   - type: OpenAPI
-    url: http://example.com/openapi.yml
+    url: https://docs.blockfrost.io/blockfrost-openapi.yaml   
 common:
-- type: Signup
-  url: https://example.com/signup
-
+- type: Getting Started
+  url: https://blockfrost.dev/overview/getting-started
+- type: Pricing
+  url: https://blockfrost.io/#pricing
+- type: Status
+  url: https://status.blockfrost.io/
+- type: Workspaces
+  url: https://blockfrost.dev/overview/workspaces/
+- type: SDKs
+  url: https://blockfrost.dev/sdks
+- type: Support
+  url: https://blockfrost.dev/support
+- type: Contributing
+  url: https://blockfrost.dev/contributing
+- type: Bounties
+  url: https://github.com/blockfrost/blockfrost.dev/issues?q=is%3Aopen+is%3Aissue+label%3ABounty%21
+- type: GitHubOrganization
+  url: https://github.com/blockfrost
+- type: Discord
+  url: https://discord.gg/inputoutput
+- type: StackExchange
+  url: https://cardano.stackexchange.com/
+- type: Reddit
+  url: https://www.reddit.com/r/CardanoDevelopers/
+- type: Login
+  url: https://blockfrost.io/auth/signin
+- type: TermsOfService
+  url: https://blockfrost.io/terms
+- type: PrivacyPolicy
+  url: https://blockfrost.io/privacy
+- type: LinkedIn
+  url: https://www.linkedin.com/company/blockfrost/  
 maintainers:
 - FN: Kin Lane
-  X-twitter: apievangelist
   email: info@apievangelist.com
-view raw
-apis-json-example.yaml hosted with ❤ by GitHub
-
-Who is 
