--- a/apis.yml
+++ b/apis.yml
@@ -1,4 +1,3 @@
----
 aid: blockfrost
 url: https://github.com/api-search/blockfrost/apis.yml
 apis:
@@ -15,8 +14,9 @@ apis:
         type: Documentation
       - url: https://docs.blockfrost.io/blockfrost-openapi.yaml
         type: OpenAPI
-    description: Tap into Cardano's potential with our comprehensive set of API
-      endpoints. Create dApps, transact and explore the blockchain.
+    description: >-
+      Tap into Cardano's potential with our comprehensive set of API endpoints.
+      Create dApps, transact and explore the blockchain.
 name: Blockfrost
 tags:
   - Blockchain
@@ -38,7 +38,8 @@ common:
     type: Support
   - url: https://blockfrost.dev/contributing
     type: Contributing
-  - url: https://github.com/blockfrost/blockfrost.dev/issues?q=is%3Aopen+is%3Aissue+label%3ABounty%21
+  - url: >-
+      https://github.com/blockfrost/blockfrost.dev/issues?q=is%3Aopen+is%3Aissue+label%3ABounty%21
     type: Bounties
   - url: https://github.com/blockfrost
     type: GitHubOrganization
@@ -56,11 +57,14 @@ common:
     type: PrivacyPolicy
   - url: https://www.linkedin.com/company/blockfrost/
     type: LinkedIn
-created: 2024-09-27
-modified: 2024-11-08
-description: Tap into Cardano's potential with our comprehensive set of API
-  endpoints. Create dApps, transact and explore the blockchain.
+created: '2024-09-27T00:00:00.000Z'
+modified: '2024-12-22'
+description: >-
+  Tap into Cardano's potential with our comprehensive set of API endpoints.
+  Create dApps, transact and explore the blockchain.
 maintainers:
   - FN: Kin Lane
     email: info@apievangelist.com
-specificationVersion: "0.18"
+specificationVersion: '0.18'
+position: Consuming
+access: 3rd-Party
